--- a/app/src/main/res/layout/item_workout.xml
+++ b/app/src/main/res/layout/item_workout.xml
@@ -45,13 +45,12 @@
                     android:id="@+id/text_title_workout_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:autofillHints=""
                     android:fontFamily="sans-serif"
                     android:gravity="center|center_vertical"
                     android:hint="@string/title_workouts"
                     android:inputType="none"
-                    android:minHeight="32dp"
+                    android:minHeight="48dp"
                     android:text="@{workout.name}"
                     android:textColorHint="#F5F5F5"
                     android:textSize="24sp"
@@ -61,9 +60,10 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraintLayout"
+                    android:id="@+id/constraint_layout_workout_item_buttons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/sg_design_light_green"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -134,11 +134,13 @@
                     android:id="@+id/recyclerview_exercises"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:visibility="@{visible ? View.VISIBLE : View.GONE, default = gone}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+                    app:layout_constraintTop_toBottomOf="@+id/constraint_layout_workout_item_buttons"
                     tools:listitem="@layout/item_exercise" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
