--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -19,7 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
             app:cardBackgroundColor="@color/sg_design_light_green"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/button_counter_exercise_item"
+                    android:id="@+id/button_amount_exercise_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -44,26 +44,48 @@
                     android:gravity="center"
                     android:minWidth="48dp"
                     android:minHeight="48dp"
+                    android:minEms="5"
                     android:text="@{Integer.toString(workoutExerciseAndExercise.workoutExercise.amount)}"
                     android:textSize="16sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="DuplicateSpeakableTextCheck" />
 
                 <TextView
                     android:id="@+id/text_name_exercise_item"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:autofillHints="@string/untitled"
+                    android:backgroundTint="@color/white"
+                    android:gravity="center|center_vertical"
+                    android:minHeight="48dp"
+                    android:text="@{workoutExerciseAndExercise.exercise.name, default=@string/enter_text}"
+                    android:textColor="#004D40"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button_info_exercise_item"
+                    app:layout_constraintStart_toEndOf="@+id/button_amount_exercise_item"
+                    app:layout_constraintTop_toTopOf="@+id/button_amount_exercise_item" />
+
+                <ImageButton
+                    android:id="@+id/button_info_exercise_item"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:autofillHints="@string/empty_string"
-                    android:gravity="center_vertical|end"
-                    android:minHeight="32dp"
-                    android:text="@{workoutExerciseAndExercise.exercise.name}"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:background="@color/sg_design_light_green"
+                    android:contentDescription="@string/info"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_info_black_24dp"
+                    tools:ignore="ImageContrastCheck" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
