--- a/app/src/main/res/layout/item_workout.xml
+++ b/app/src/main/res/layout/item_workout.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             app:cardBackgroundColor="@color/sg_design_green"
-            app:cardCornerRadius="16dp"
+            app:cardCornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -52,7 +52,8 @@
                     android:inputType="none"
                     android:minHeight="48dp"
                     android:text="@{workout.name}"
-                    android:textColorHint="#F5F5F5"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +102,7 @@
                         android:contentDescription="@string/copy"
                         android:minHeight="48dp"
                         android:src="@drawable/ic_copy_black_24dp"
-                        app:layout_constraintEnd_toStartOf="@+id/add_btn_workout_item"
+                        app:layout_constraintEnd_toStartOf="@+id/delete_btn_workout_item"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
@@ -112,7 +113,7 @@
                         android:contentDescription="@string/add"
                         android:minHeight="48dp"
                         android:src="@drawable/ic_add_training_black_24dp"
-                        app:layout_constraintEnd_toStartOf="@+id/delete_btn_workout_item"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="ImageContrastCheck" />
 
@@ -124,7 +125,7 @@
                         android:contentDescription="@string/delete"
                         android:minHeight="48dp"
                         android:src="@drawable/ic_delete_black_24dp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/add_btn_workout_item"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="ImageContrastCheck" />
 
@@ -142,6 +143,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/constraint_layout_workout_item_buttons"
                     tools:listitem="@layout/item_exercise" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
